--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,14 @@
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
+          <ion-menu-toggle autoHide="false">
+            <ion-item button detail="false" (click)="onAddReminder()">
+              <ion-icon slot="start" name="document-text-outline"></ion-icon>
+              <ion-label>
+                Додати нагадування
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
 
           <ion-menu-toggle autoHide="false">
             <ion-item button (click)="logout()" detail="false">
