--- a/src/app/shared/components/dialogs/add-reminder-modal/add-reminder-modal.component.html
+++ b/src/app/shared/components/dialogs/add-reminder-modal/add-reminder-modal.component.html
@@ -1,17 +1,26 @@
 <ion-header>
     <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-button color="medium" (click)="cancel()">Cancel</ion-button>
-      </ion-buttons>
-      <ion-title>Додавання нагадування</ion-title>
-      <ion-buttons slot="end">
-        <ion-button [disabled]="!date || !time || description.length < 3" (click)="confirm()" [strong]="true">Confirm</ion-button>
-      </ion-buttons>
+        <ion-buttons slot="start">
+            <ion-button color="medium" (click)="cancel()">Скасувати</ion-button>
+        </ion-buttons>
+        <ion-title>Додати нагадування</ion-title>
+        <ion-buttons slot="end">
+            <ion-button [disabled]="!date || !dateTime || description.length < 3" (click)="confirm()"
+                [strong]="true">Зберегти</ion-button>
+        </ion-buttons>
     </ion-toolbar>
-  </ion-header>
-  <ion-content class="ion-padding">
+</ion-header>
+<ion-content class="ion-padding">
     <ion-item>
-      <ion-label position="floating">Нагадування:</ion-label>
-      <ion-input [(ngModel)]="description" type="text"></ion-input>
+        <ion-label position="floating">Текст нагадування:</ion-label>
+        <ion-input [(ngModel)]="description" type="text"></ion-input>
     </ion-item>
-  </ion-content>
+    <ion-item>
+        <div>
+            <ion-label class="datepicker-label">Вкажіть день та час:</ion-label>
+            <ion-datetime presentation="date-time" [preferWheel]="true"
+                (ionChange)="onDateTimeChanged($event)"></ion-datetime>
+        </div>
+
+    </ion-item>
+</ion-content>
