model change; add reminder functionality

--- a/src/app/pages/calendar/components/advance-preparation/advance-preparation.component.html
+++ b/src/app/pages/calendar/components/advance-preparation/advance-preparation.component.html
@@ -9,11 +9,8 @@
     >
       <ion-label>
         
-        <h4>{{ prep.prepDescription }}</h4>
-        
-        <p>
-          {{ prep.day.toString() | date }}
-        </p>
+        <h4>{{ prep.description }}</h4>        
+ 
       </ion-label>
     </ion-item>
   </ng-container>
