--- a/src/app/pages/calendar/components/advance-preparation/advance-preparation.component.html
+++ b/src/app/pages/calendar/components/advance-preparation/advance-preparation.component.html
@@ -1,17 +1,21 @@
 <ion-list>
   <ng-container *ngFor="let prep of prepListItems">
-    <ion-item
-      button
-      swipeLeftNoConfirmation
-      detail="false"
-      *ngIf="!prep.done"
-      (itemSwiped)="markAsDone(prep)"
-    >
-      <ion-label>
-        
-        <h4>{{ prep.description }}</h4>        
- 
-      </ion-label>
-    </ion-item>
+    <ion-item-sliding #slidingContainer>
+      <ion-item button detail="false" *ngIf="!prep.done">
+        <ion-label class="reminder-description">
+          {{ prep.description }}
+        </ion-label>
+        <p>{{prep.fullDate | date:'shortTime'}}</p>
+      </ion-item>
+      <ion-item-options>
+        <ion-item-option (click)="markAsDone(prep)">
+          <div>
+            <ion-icon name="checkmark-outline" class="small-icon"></ion-icon>
+          </div>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
   </ng-container>
+
 </ion-list>
