--- a/src/global.scss
+++ b/src/global.scss
@@ -120,3 +120,7 @@ ion-item-sliding ion-item-option div {
     text-transform: lowercase;
   }
 }
+
+.timed-out{
+  color: var(--ion-color-warning);
+}
