--- a/src/app/shared/components/dialogs/controller-input-dialog/controller-input-dialog.component.html
+++ b/src/app/shared/components/dialogs/controller-input-dialog/controller-input-dialog.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-button color="medium" (click)="cancel()">Cancel</ion-button>
     </ion-buttons>
-    <ion-title>Welcome</ion-title>
+    <!-- <ion-title>Welcome</ion-title> -->
     <ion-buttons slot="end">
       <ion-button (click)="confirm()" [strong]="true">Confirm</ion-button>
     </ion-buttons>
