--- a/src/app/shared/components/dialogs/controller-list-select-dialog/controller-list-select-dialog.component.html
+++ b/src/app/shared/components/dialogs/controller-list-select-dialog/controller-list-select-dialog.component.html
@@ -9,7 +9,7 @@
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding">
+  <ion-content>
     <ion-item>
       <ion-label position="floating">Виберіть зі списку:</ion-label>
       <ion-radio-group [(ngModel)]="selected">
