--- a/src/app/shared/components/product-autocomplete/product-autocomplete.component.html
+++ b/src/app/shared/components/product-autocomplete/product-autocomplete.component.html
@@ -1,21 +1,33 @@
 <div class="ng-autocomplete" [ngClass]="{'product-selected': isSelected}">
-  <ng-autocomplete
-  #autocomplete
-  [data]="products"
-  [searchKeyword]="keyword"
-  placeholder="Введіть назву продукту"
-  (selected)="selectEvent($event)"
-  (inputCleared)="onClearSearch()"
-  [itemTemplate]="itemTemplate"
-  [notFoundTemplate]="notFoundTemplate"
->
-</ng-autocomplete>
+  <ng-autocomplete #autocomplete [data]="products" [searchKeyword]="keyword" placeholder="Введіть назву продукту"
+    (selected)="selectEvent($event)" (inputCleared)="onClearSearch()" [itemTemplate]="itemTemplate"
+    [notFoundTemplate]="isAddNewProductEnabled? notFoundAddNewTemplate : notFoundTemplate">
+  </ng-autocomplete>
 
-<ng-template #itemTemplate let-item>
-  <a [innerHTML]="item.name"></a>
-</ng-template>
+  <ng-template #itemTemplate let-item>
+    <a [innerHTML]="item.name"></a>
+  </ng-template>
 
-<ng-template #notFoundTemplate let-notFound>
-  <div [innerHTML]="notFound"></div>
-</ng-template>
+  <ng-template #notFoundTemplate let-notFound>
+    <div [innerHTML]="notFound"></div>
+  </ng-template>
+
+  <ng-template #notFoundAddNewTemplate>
+    <ion-button [id]="'add-newproduct'" expand="block" size="small">Продукт відстуній в базі даних, додати</ion-button>
+    <ion-modal [initialBreakpoint]="0.75" [breakpoints]="[0, 0.25, 0.5, 0.75]" #modal [trigger]="'add-newproduct'"
+      [presentingElement]="presentingElement">
+      <ng-template>
+        <ion-header>
+          <ion-toolbar>
+            <ion-buttons slot="end">
+              <ion-button (click)="modal.dismiss()">Закрити</ion-button>
+            </ion-buttons>
+          </ion-toolbar>
+        </ion-header>
+        <ion-content class="ion-padding">
+          <app-add-product-form></app-add-product-form>
+        </ion-content>
+      </ng-template>
+    </ion-modal>
+  </ng-template>
 </div>
