--- a/src/app/shared/components/add-product-form/add-product-form.component.html
+++ b/src/app/shared/components/add-product-form/add-product-form.component.html
@@ -1,39 +1,35 @@
 <form [formGroup]="productForm" novalidate class="add-product-wrapper">
   <ion-item>
-    <ion-label position="floating">Назва</ion-label>
-    <ion-input formControlName="name" type="text"></ion-input>
+    <ion-input label="Назва" labelPlacement="floating" formControlName="name" type="text"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label position="floating">Щільність в кг/дм3</ion-label>
-    <ion-input formControlName="density" type="tel"></ion-input>
+    <ion-input label="Щільність в кг/дм3" labelPlacement="floating" formControlName="density" type="tel"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label position="floating">Грамів в одній штуці середньої величини</ion-label>
-    <ion-input formControlName="grInOneItem" type="tel"></ion-input>
+    <ion-input label="Грамів в одній штуці середньої величини" labelPlacement="floating" formControlName="grInOneItem"
+      type="tel"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Ккал в 100гр</ion-label>
-    <ion-input formControlName="calories" type="tel"></ion-input>
+    <ion-input label="Ккал в 100гр" labelPlacement="floating" formControlName="calories" type="tel"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Коефіцієнт зміни кількості при приготуванні</ion-label>
-    <ion-input formControlName="sizeChangeCoef" type="tel"></ion-input>
+    <ion-input label="Коефіцієнт зміни кількості при приготуванні" labelPlacement="floating"
+      formControlName="sizeChangeCoef" type="tel"></ion-input>
   </ion-item>
 
   <ion-accordion-group>
     <ion-accordion value="first">
       <ion-item slot="header" [color]="
-            productForm.controls['defaultUnit'].valid ? 'tertiary' : 'light'
-          ">
+      productForm.controls['defaultUnit'].valid ? 'tertiary' : 'light'
+    ">
         <ion-label>Виберіть одиницю виміру</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">
         <ion-radio-group formControlName="defaultUnit">
           <ion-item *ngFor="let unit of measuringUnits">
-            <ion-label>{{ getMeasuringUnitText(unit) }}</ion-label>
-            <ion-radio slot="end" [value]="unit"></ion-radio>
+            <ion-radio labelPlacement="start" [value]="unit">{{ getMeasuringUnitText(unit) }}</ion-radio>
           </ion-item>
         </ion-radio-group>
       </div>
@@ -45,8 +41,7 @@
       <div class="ion-padding" slot="content">
         <ion-radio-group formControlName="type">
           <ion-item *ngFor="let type of productTypes">
-            <ion-label>{{ getProductTypeText(type) }}</ion-label>
-            <ion-radio slot="end" [value]="type"></ion-radio>
+            <ion-radio labelPlacement="start" [value]="type">{{ getProductTypeText(type) }}</ion-radio>
           </ion-item>
         </ion-radio-group>
       </div>
