add recipy to calendar: added filters to the modal

--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
@@ -8,9 +8,14 @@
           <ion-button (click)="cancel()">Cancel</ion-button>
         </ion-buttons>
         <ion-title>Виберіть рецепт</ion-title>
+        <ion-buttons slot="end"  *ngIf="(collectionSelected$ | async)">
+          <app-filters></app-filters>
+        </ion-buttons>
+        
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding">
+      <app-search-recipies-filter  *ngIf="(collectionSelected$ | async)"></app-search-recipies-filter>
       <h6>{{date.toString() | date : "EE, MMM d"}}, {{mealtimeText.toLowerCase()}}</h6>
 
       <ng-container *ngIf="!(collectionSelected$ | async)">
@@ -24,6 +29,8 @@
           </ion-item>
         </ion-list>
       </ng-container>
+
+      <!-- page with recipies by collection -->
       <ng-container *ngIf="collectionSelected$ | async">
         <h3 class="collection-name">
           <ion-button size="small" (click)="collectionSelected$.next(null)">
@@ -79,6 +86,8 @@
           </ion-item>
         </ion-list>
       </ng-container>
+
+
     </ion-content>
   </ng-template>
 </ion-modal>
